--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="%BASE_URL%favicon.ico" />
     <title>Strategický audit: Záhorácka pražiareň</title>
     <script src='https://cdn.tailwindcss.com'></script>
     <script>
